# dailyinsightai

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml  python-tests.yml
backend/: .env.example  pyproject.toml
backend/src/dailyinsightai/: ai_integration.py  api.py  db.py  journaling.py  server.py
backend/src/openai/: __init__.py
backend/tests/: conftest.py  test_basic.py
docs/: about.mdx
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: JournalEntry.tsx
src/: ai_integration.py  db.py  journaling.py  main.py
src/dailyinsightai/: ai_integration.py  db.py  journaling.py  main.py
tests/: test_basic.py
